hci bootcamp and phrasing

--- a/projects.html
+++ b/projects.html
@@ -25,32 +25,40 @@
         <p style="margin-top: 30px">The following is a list of the projects I've worked on over the last several years. Select any project to see photos (and sometimes videos) and more information.</br></br>Here is a high quality PDF version of my portfolio with a selection of these projects: <a href="media/portfolio.pdf" download="ZackWilson_Portfolio">portfolio.pdf</a></p>
                 <h2>UX and HCI Projects</h2>
                 <ul>
+                  <li><a href="">Bimanual Creativity Tools</a> - 2020-present<br/>
+                    #interaction-design #user-research #analysis #user-centered-design #data-collection
+                    <p style="margin-top: 3px">I am currently finishing my Master's thesis researching bimanual interaction and the creative process. I am collecting stories from different creative professionals, musicians, audio engineers, visual artists, illustrators, graphic designers and architects. I have been analyzing and combinging these stories into an summary of the different stages, keys, techniques, and vaguaries of the creative process. I am creating a concept design for a bimanual tool that helps across the creative process - from ideation, to inspiration, to procrastination, to production - to support all the various processes necessary to produce creative work.</p>
+                  </li>
+                  <li><a href="projects/hcibootcamp/index.html">MeetHalfway</a> - 2019<br/>
+                    #data-collection #iterative-design #interaction-design #storyboarding
+                    <p style="margin-top: 3px">A prototype mobile map application called MeetHalfway to facilitate meetups, developed over the course of a week in a design bootcamp at the Université Paris-Saclay. Based on interview data, we went through two full design cycles in the intensive week – from basic brainstorming, through to a breakdown analysis of a video protoype.</p>
+                  </li>
                   <li><a href="projects/helpkiosk/index.html">HelpKiosk</a> - 2017-18<br/>
                   	#usability-testing #iterative-design #user-research #analysis
                     <p style="margin-top: 3px">In collaboration between Samsung R&D Vancouver and the eDAPT Lab at the University of British Columbia, I led a research project to redesign a kiosk to help seniors learn to use smart phones. With one other research assistant, we updated an old version of the application, conducted initial user testing, iterated on the design of the experience, then conducted a formal usability study, using thematic analysis to process the interviews, which was presented as a poster at the ASSETS '18 conference.</p>
                   </li>
                   <li><a href="projects/terratree/index.html">TerraTree</a> - 2019<br/>
                     #rapid-prototyping #interaction-design #multi-modal-interaction
-                	<p style="margin-top: 3px">Interactive, multi-modal installation on a historic site in the city of Enschede, NL. Developed in cooperation with local city planners and the local historical society, through the University of Twente.</p>
+                	<p style="margin-top: 3px">An interactive, multi-modal installation in a historic city park in the city of Enschede, NL. This was designed and developed over the course of 3 months, in cooperation with local city planners and the local historical society, through the University of Twente.</p>
                 	</li>
                   <li><a href="projects/tippie/index.html">Tippie</a> - 2019<br/>
                     #user-research #business-strategy #rapid-prototyping
-                    <p style="margin-top: 3px">Cashless payment solution for street performers, community art events, and other traditionally cash-based donations, inspired by a week of user research conducted in Budapest. Created during the European Institute of Innovation and Technology - Digital Finance summer school in Budapest.</p>
+                    <p style="margin-top: 3px">A cashless payment solution for street performers, community art events, and other traditionally cash-based donations, inspired by a week of user research conducted in Budapest. Created during the European Institute of Innovation and Technology - Digital Finance summer school in Budapest, in partnership with Novopayments.</p>
                   </li>
                   <li><a href="projects/worker/index.html">WorkeR</a> - 2018-19<br/>
                     #storyboarding #user-research #user-centered-design #business-strategy
-                    <p style="margin-top: 3px">A multi-discplinary, VR training environment to allow different stakeholders (Police, Medical, Fire) to train together and cooperate in virtual scenarios without being collocated. Based on four rounds of user studies conducted with the Fire Department in Enschede, NL, and other paramedics around Europe.</p>
+                    <p style="margin-top: 3px">A cross-discipline, virtual reality training environment to allow different first responders (Police, Medical, Fire) to train together in virtual scenarios without being collocated. Based on four rounds of user studies conducted with the Fire Department in Enschede, NL, and other paramedics around The Netherlands and Europe.</p>
                   </li>
                   <li><a href="projects/design/index.html">Other design projects</a> - 2016-19<br/>
                     #user-research #user-centered-design #interaction-design #visual-design
-                    <p style="margin-top: 3px">Three projects from my undergraduate and masters programs focused on human-computer interaction and user experience design.</p>
+                    <p style="margin-top: 3px">Several more projects and examples from my undergraduate and masters programs focused on human-computer interaction and user experience design.</p>
                   </li>
                 </ul>
                 <h2>Art Projects</h2>
                 <ul>
                   <li><a href="projects/melt/index.html">Melt Collective</a> - 2017-18<br/>
                   	#design-thinking #prototyping #iterative-design
-                    <p style="margin-top: 3px">6 months of artist-in-residency at the <a href="http://www.meltcollective.com" target="blank">Melt Collective</a> lab. Helping to ideate and prototype creative uses for recycled plastic in various multi-discplinary teams including artists, scientists, engineers, and more. Meanwhile working on one main project to develop a way to melt and mold plastic bags - prototype archway built from bricks manufactured using this technique.</p>
+                    <p style="margin-top: 3px">Project from a 6 month artist residency at the <a href="http://www.meltcollective.com" target="blank">Melt Collective</a> lab, helping to ideate and prototype creative uses for recycled plastic. I also joined various multi-discplinary teams including artists, scientists, engineers, and more. My main project involved exploring ways to melt and mold plastic bags, and building a prototype archway from bricks manufactured using this technique.</p>
                   </li>
                   <li><a href="projects/artworks/index.html">Other art projects</a> - 2014-19<br/>
                   	#visual-design #interaction-design #prototyping #iterative-design #illustration
