added INRIA position

--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
 			</div>
 			<div id="projects" class="contentlist">
         <p style="margin-top: 30px">The following is a list of the projects I've worked on over the last several years. Select any project to see photos (and sometimes videos) and more information.</br></br>Here is a high quality PDF version of my portfolio with a selection of these projects: <a href="media/portfolio.pdf" download="ZackWilson_Portfolio">portfolio.pdf</a></p>
-                <h2>UX and HCI Projects</h2>
+                <h2>UX and HCI Work</h2>
                 <ul>
                   <li><a href="">Bimanual Creativity Tools</a> - 2020-present<br/>
                     #interaction-design #user-research #analysis #user-centered-design #data-collection
@@ -58,22 +58,22 @@
                 <ul>
                   <li><a href="projects/melt/index.html">Melt Collective</a> - 2017-18<br/>
                   	#design-thinking #prototyping #iterative-design
-                    <p style="margin-top: 3px">Project from a 6 month artist residency at the <a href="http://www.meltcollective.com" target="blank">Melt Collective</a> lab, helping to ideate and prototype creative uses for recycled plastic. I also joined various multi-discplinary teams including artists, scientists, engineers, and more. My main project involved exploring ways to melt and mold plastic bags, and building a prototype archway from bricks manufactured using this technique.</p>
+                    <p style="margin-top: 3px">6 months in an artist residency at the <a href="http://www.meltcollective.com" target="blank">Melt Collective</a> lab, helping to ideate and prototype creative uses for recycled plastic. I joined various multi-discplinary teams including artists, scientists, engineers, and more. My main project involved exploring ways to melt and mold plastic bags, and building a prototype archway from bricks manufactured using this technique.</p>
                   </li>
                   <li><a href="projects/artworks/index.html">Other art projects</a> - 2014-19<br/>
                   	#visual-design #interaction-design #prototyping #iterative-design #illustration
-                    <p style="margin-top: 3px">Various art projects from throughout my undergraduate fine art degree, and beyond: ranging from traditional painting, to experimental wearables, to robotic sculptures.</p>
+                    <p style="margin-top: 3px">Various other art projects from my undergraduate art degree and beyond: ranging from traditional painting, to experimental wearables, to robotic sculptures.</p>
                   </li>
                 </ul>
-                <h2>Work Experience</h2>
+                <h2>Design Work</h2>
                 <ul>
                   <li><a href="projects/ahva/index.html">Visual Art Department - UBC</a><br/>
                   	#user-centered-design #design-thinking #visual-design #illustration
-                    <p style="margin-top: 3px">Redesigned the website into a new digital information hub for safety, training and other information. Managed web content and designed posters for visiting artists and art exhibitions</p>
+                    <p style="margin-top: 3px">Website UI and UX designer for the VISA Department at UBC. Redesigned the website into a new digital information hub for safety, training and other information. Managed web content and designed posters for visiting artists and art exhibitions. Kept website up to date and created a set of style guidelines.</p>
                   </li>
                   <li><a href="projects/ck12/index.html">Ck-12 Foundation</a><br/>
                   	#illustration #visual-design #interaction-design #prototyping
-                    <p style="margin-top: 3px">As an intern, then designer, then contractor, I mocked up website and app prototypes for the executive team. I helped develop the concept and design of a new “Study Guides” feature, and created hundreds of illustrations for science and math textbooks. I also helped to debug and refine beta content tools targeted at teachers.</p>
+                    <p style="margin-top: 3px">Started as an intern, then designer, then contractor, I mocked up website and app prototypes for the executive team. I helped develop the concept and design of a new line of “Study Guides”, and created hundreds of illustrations for science and math textbooks. I also helped to debug, test and refine beta content tools for teachers to develop their own interactive problem sets.</p>
                     <p style="margin-bottom: 25px"></p>
                   </li>
                	</ul>
@@ -92,7 +92,7 @@
                     <p>Collaboratively designed and ran a study into home-delivery grocery systems, with a focus on integrating them into workflow in the kitchen (e.g. smart kitchens, meal planning, etc.) <a href="projects/design/index.html">more</a></p>
                   </li>
                   <li>
-                    <p>Built from scratch the backend of a RESTful API to search, and sort all the enrollment data at University of British Columbia. Then, built a Javascript front-end using the latest libraries (React) to display the data and allow users to explore it in a web-UI environment. (<a href="https://github.com/CS310-2016Fall/cpsc310project_team78" target="blank">link to repo</a>)</p>
+                    <p>Built from scratch the backend of a RESTful API to search, and sort all the enrollment data at University of British Columbia. Then, built a Javascript front-end using the latest libraries (React) to display the data and allow users to explore it in a web-UI environment. (<a href="https://github.com/zlwilson/cpsc310project" target="blank">link to repo</a>)</p>
                   </li>
                   <li>
                     <p>Built an Android app using the local (Vancouver) bus database, to plan trips, and live-plot buses.</p>
