--- a/resume.html
+++ b/resume.html
@@ -24,9 +24,13 @@
 			<div id="resume" class="contentlist">
                 <table>
                     <tr>
-                        <td style="text-align: left;"><h1>Experience</h1></td>
+                        <td style="text-align: left; vertical-align:top; padding-top: 60px"><h1>Experience</h1></td>
                         <td style="text-align: left; width:85%;">
                             <ul>
+                                <li><a href="https://ex-situ.lri.fr" target="blank">Ex)situ Lab at INRIA Paris</a> | Paris, FR - 2020-present
+                                    <p>Research Intern</p>
+                                    <p>Currently finishing my Masters thesis in a research intern position at INRIA in Paris. Researching the process of various creative professionals (audio, visual, design, architecture), and exploring the potentials of bimanual interactions for supporting varied creative processes.</p>
+                                </li>
                                 <li><a href="http://www.cs.ubc.ca/labs/imager/laboverview.php" target="blank">Samsung + eDAPT Lab (UBC)</a> | Vancouver, BC - 2017-18
                                     <p>Undergraduate Researcher</p>
                                     <p>Working with one other undergraduate researcher, I built a prototype kiosk to help seniors learn to use smart phones, which expanded on a prototype developed by a researcher at the Samsung UX research lab in Vancouver, BC. We began with lightweight user testing to gather initial feedback while we iterated on the design of the kiosk, and finally we designed and ran a controlled experiment in collaboration with a post-doc in Japan which was presented as a poster at CSCW '18. <a href="projects/helpkiosk/index.html">more ></a></p>
