--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
                 <ul>
                   <li><a href="">Bimanual Creativity Tools</a> - 2020-present<br/>
                     #interaction-design #user-research #analysis #user-centered-design #data-collection
-                    <p style="margin-top: 3px">I am currently finishing my Master's thesis researching bimanual interaction and the creative process. I am collecting stories from different creative professionals, musicians, audio engineers, visual artists, illustrators, graphic designers and architects. I have been analyzing and combinging these stories into an summary of the different stages, keys, techniques, and vaguaries of the creative process. I am creating a concept design for a bimanual tool that helps across the creative process - from ideation, to inspiration, to procrastination, to production - to support all the various processes necessary to produce creative work.</p>
+                    <p style="margin-top: 3px">I am currently conducting research into creativity support tools. I have been collecting stories to build user-centered designs for different creative professionals: musicians, audio engineers, visual artists, illustrators, graphic designers and architects. I have been analyzing and combinging these stories into an summary of the different stages, keys, techniques, and vaguaries of the creative process. I have designed three embodied creativity tools, that support musicians, writers, and illustrators across their creative processes - from ideation, to inspiration, to procrastination, to production.</p>
                   </li>
                   <li><a href="projects/hcibootcamp/index.html">MeetHalfway</a> - 2019<br/>
                     #data-collection #iterative-design #interaction-design #storyboarding
@@ -79,7 +79,7 @@
                	</ul>
                 <hr>
                 <h2>Coursework</h2>
-                <p>I'm currently finishing a dual Master of Science degree at the University of Twente and the University of Paris-Sud, through the European Institure of Innovation and Technology Digital Masters School. My focus is in human-computer interaction design, with a minor in innovation and entrepreneurship. The courses concentrate on user-centered design practices, user-experience design, user research, techniques for rapid prototyping, and capturing and designing from user insights.</p>
+                <p>I completed a dual Master of Science degree at the University of Twente and the University of Paris-Sud, through the European Institure of Innovation and Technology Digital Masters School. My focus was in human-computer interaction design, with a minor in innovation and entrepreneurship. The courses concentrated on user-centered design practices, user-experience design, user research, techniques for rapid prototyping, and capturing and designing from user insights.</p>
                 <p style="margin-bottom: 25px">My undergraduate studies in computer science focused on human-computer interaction and user-centered design methods, and software engineering (web applications, database design and algorithms).                
                 In visual art, my work focused on the study of humans and technology: the technohuman, the “non-spaces” created by technology, and the way that interactions with technology facilitate humanity.</p>
                 <hr>
