basic projects update

--- a/projects.html
+++ b/projects.html
@@ -22,39 +22,48 @@
                 </div>
 			</div>
 			<div id="projects" class="contentlist">
-        <p style="margin-top: 30px">The following is a list of the projects I've worked on over the last several years. Select any project to see photos (and sometimes videos) and more information.</br></br>Here is a high quality PDF version of my portfolio with a selection of these projects: <a href="media/portfolio.pdf" download="ZackWilson_Portfolio">portfolio.pdf</a></p>
-                <h2>UX and HCI Work</h2>
+        <p style="margin-top: 30px">The following is a list of the projects I've worked on over the last several years. Select any project to see photos (and sometimes videos) and more information.</br></br>Here is a high quality PDF version of my portfolio with a selection of these projects: <a href="media/ZackWilson_portfolio.pdf" download="ZackWilson_Portfolio">portfolio.pdf</a></p>
+                <h2>Design Work</h2>
                 <ul>
-                  <li><a href="">Bimanual Creativity Tools</a> - 2020-present<br/>
+                  <li><a href="">Bimanual Creativity Tools</a> - INRIA Paris - 2020<br/>
                     #interaction-design #user-research #analysis #user-centered-design #data-collection
                     <p style="margin-top: 3px">I am currently conducting research into creativity support tools. I have been collecting stories to build user-centered designs for different creative professionals: musicians, audio engineers, visual artists, illustrators, graphic designers and architects. I have been analyzing and combinging these stories into an summary of the different stages, keys, techniques, and vaguaries of the creative process. I have designed three embodied creativity tools, that support musicians, writers, and illustrators across their creative processes - from ideation, to inspiration, to procrastination, to production.</p>
                   </li>
-                  <li><a href="projects/hcibootcamp/index.html">MeetHalfway</a> - 2019<br/>
+                  <li><a href="projects/hcibootcamp/index.html">MeetHalfway</a> - Université Paris-Saclay - 2019<br/>
                     #data-collection #iterative-design #interaction-design #storyboarding
-                    <p style="margin-top: 3px">A prototype mobile map application called MeetHalfway to facilitate meetups, developed over the course of a week in a design bootcamp at the Université Paris-Saclay. Based on interview data, we went through two full design cycles in the intensive week – from basic brainstorming, through to a breakdown analysis of a video protoype.</p>
+                    <p style="margin-top: 3px">A prototype mobile map application to facilitate meetups, developed over the course of a week in a design bootcamp at the Université Paris-Saclay. Based on interview data, we went through two full design cycles in the intensive week – from user interviews, to basic brainstorming, through to a breakdown analysis of a video protoype.</p>
                   </li>
-                  <li><a href="projects/helpkiosk/index.html">HelpKiosk</a> - 2017-18<br/>
+                  <li><a href="projects/ahvaHUB/index.html">Digital Info-Hub</a> - UBC Visual Art Department - 2018<br/>
+                  	#user-centered-design #design-thinking #visual-design #illustration
+                    <p style="margin-top: 3px">As the website UI and UX designer for the VISA Department at UBC, I led a project to redesign the website, to create a new digital information hub for safety, training and other information.</p>
+                  </li>
+                  <li><a href="projects/helpkiosk/index.html">HelpKiosk</a> - UBC eDAPT Lab - 2017-18<br/>
                   	#usability-testing #iterative-design #user-research #analysis
                     <p style="margin-top: 3px">In collaboration between Samsung R&D Vancouver and the eDAPT Lab at the University of British Columbia, I led a research project to redesign a kiosk to help seniors learn to use smart phones. With one other research assistant, we updated an old version of the application, conducted initial user testing, iterated on the design of the experience, then conducted a formal usability study, using thematic analysis to process the interviews, which was presented as a poster at the ASSETS '18 conference.</p>
                   </li>
-                  <li><a href="projects/terratree/index.html">TerraTree</a> - 2019<br/>
+                  <li><a href="projects/terratree/index.html">TerraTree</a> - Enschede, the Netherlands - 2019<br/>
                     #rapid-prototyping #interaction-design #multi-modal-interaction
                 	<p style="margin-top: 3px">An interactive, multi-modal installation in a historic city park in the city of Enschede, NL. This was designed and developed over the course of 3 months, in cooperation with local city planners and the local historical society, through the University of Twente.</p>
                 	</li>
-                  <li><a href="projects/tippie/index.html">Tippie</a> - 2019<br/>
+                  <li><a href="projects/tippie/index.html">Tippie</a> – EIT Budapest Summer School - 2019<br/>
                     #user-research #business-strategy #rapid-prototyping
                     <p style="margin-top: 3px">A cashless payment solution for street performers, community art events, and other traditionally cash-based donations, inspired by a week of user research conducted in Budapest. Created during the European Institute of Innovation and Technology - Digital Finance summer school in Budapest, in partnership with Novopayments.</p>
                   </li>
-                  <li><a href="projects/worker/index.html">WorkeR</a> - 2018-19<br/>
+                  <li><a href="projects/worker/index.html">WorkeR</a> - University of Twente - 2018-19<br/>
                     #storyboarding #user-research #user-centered-design #business-strategy
                     <p style="margin-top: 3px">A cross-discipline, virtual reality training environment to allow different first responders (Police, Medical, Fire) to train together in virtual scenarios without being collocated. Based on four rounds of user studies conducted with the Fire Department in Enschede, NL, and other paramedics around The Netherlands and Europe.</p>
+                  </li>
+                  <li><a href="projects/ck12/index.html">Digital Education Tools</a> - Ck-12 Foundation - 2011-16<br/>
+                  	#illustration #visual-design #interaction-design #prototyping
+                    <p style="margin-top: 3px">Started as an intern, then designer, then contractor, I mocked up website and app prototypes for the executive team. I helped develop the concept and design of a new line of “Study Guides”, and created hundreds of illustrations for science and math textbooks. I also helped to debug, test and refine beta content tools for teachers to develop their own interactive problem sets.</p>
+                    <p style="margin-bottom: 25px"></p>
                   </li>
                   <li><a href="projects/design/index.html">Other design projects</a> - 2016-19<br/>
                     #user-research #user-centered-design #interaction-design #visual-design
                     <p style="margin-top: 3px">Several more projects and examples from my undergraduate and masters programs focused on human-computer interaction and user experience design.</p>
                   </li>
-                </ul>
-                <h2>Art Projects</h2>
+               	</ul>
+               	<h2>Art Projects</h2>
                 <ul>
                   <li><a href="projects/melt/index.html">Melt Collective</a> - 2017-18<br/>
                   	#design-thinking #prototyping #iterative-design
@@ -65,18 +74,6 @@
                     <p style="margin-top: 3px">Various other art projects from my undergraduate art degree and beyond: ranging from traditional painting, to experimental wearables, to robotic sculptures.</p>
                   </li>
                 </ul>
-                <h2>Design Work</h2>
-                <ul>
-                  <li><a href="projects/ahva/index.html">Visual Art Department - UBC</a><br/>
-                  	#user-centered-design #design-thinking #visual-design #illustration
-                    <p style="margin-top: 3px">Website UI and UX designer for the VISA Department at UBC. Redesigned the website into a new digital information hub for safety, training and other information. Managed web content and designed posters for visiting artists and art exhibitions. Kept website up to date and created a set of style guidelines.</p>
-                  </li>
-                  <li><a href="projects/ck12/index.html">Ck-12 Foundation</a><br/>
-                  	#illustration #visual-design #interaction-design #prototyping
-                    <p style="margin-top: 3px">Started as an intern, then designer, then contractor, I mocked up website and app prototypes for the executive team. I helped develop the concept and design of a new line of “Study Guides”, and created hundreds of illustrations for science and math textbooks. I also helped to debug, test and refine beta content tools for teachers to develop their own interactive problem sets.</p>
-                    <p style="margin-bottom: 25px"></p>
-                  </li>
-               	</ul>
                 <hr>
                 <h2>Coursework</h2>
                 <p>I completed a dual Master of Science degree at the University of Twente and the University of Paris-Sud, through the European Institure of Innovation and Technology Digital Masters School. My focus was in human-computer interaction design, with a minor in innovation and entrepreneurship. The courses concentrated on user-centered design practices, user-experience design, user research, techniques for rapid prototyping, and capturing and designing from user insights.</p>
