--- a/projects/design/index.html
+++ b/projects/design/index.html
@@ -24,29 +24,29 @@
 								<div>
 									<a href="images/fulls/01.jpg">
 										<img src="images/thumbs/01.jpg" alt="" />
-										<h3>Illustrations for the Dutch food delivery service <i>Picobelly</i></h3>
+										<h3>Illustrations and graphical assets for the Dutch food delivery service <i>Picobelly</i></h3>
 									</a>
 									<a href="images/fulls/02.jpg">
 										<img src="images/thumbs/02.jpg" alt="" />
-										<h3>The simple homepage for a community event planning application</h3>
+										<h3>Mocking up a homepage for a community event planning application</h3>
 									</a>
 									<a href="images/fulls/03.jpg">
 										<img src="images/thumbs/03.jpg" alt="" />
-										<h3>Prototype for a Couchsurfing redesign</h3>
+										<h3>Generating branding for a cloud-based music collaboration tool</h3>
 									</a>
 								</div>
 								<div>
 									<a href="images/fulls/04.jpg">
 										<img src="images/thumbs/04.jpg" alt="" />
-										<h3>Design alternatives for user testing</h3>
+										<h3>Illustrating design and alternatives for user testing</h3>
 									</a>
 									<a href="images/fulls/05.jpg">
 										<img src="images/thumbs/05.jpg" alt="" />
-										<h3>An experimental login screen design</h3>
+										<h3>A login screen mockup for a CouchSurfing redesign</h3>
 									</a>
 									<a href="images/fulls/06.jpg">
 										<img src="images/thumbs/06.jpg" alt="" />
-										<h3>An experimental login screen design</h3>
+										<h3>An experimental login screen with swipe interaction</h3>
 									</a>
 								</div>
 								<div>
@@ -56,11 +56,11 @@
 									</a>
 									<a href="images/fulls/08.jpg">
 										<img src="images/thumbs/08.jpg" alt="" />
-										<h3>Illustrations for a space video game</h3>
+										<h3>Illustrations and assets for a space video game</h3>
 									</a>
 									<a href="images/fulls/09.jpg">
 										<img src="images/thumbs/09.jpg" alt="" />
-										<h3>User centered deisgn using dilemnas</h3>
+										<h3>Experimenting with user "dilemna-driven" design</h3>
 									</a>
 								</div>
 							</section>
