--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,9 @@
                 <ul>
                   <li><a href="">Bimanual Creativity Tools</a> - INRIA Paris - 2020<br/>
                     #interaction-design #user-research #analysis #user-centered-design #data-collection
-                    <p style="margin-top: 3px">I am currently conducting research into creativity support tools. I have been collecting stories to build user-centered designs for different creative professionals: musicians, audio engineers, visual artists, illustrators, graphic designers and architects. I have been analyzing and combinging these stories into an summary of the different stages, keys, techniques, and vaguaries of the creative process. I have designed three embodied creativity tools, that support musicians, writers, and illustrators across their creative processes - from ideation, to inspiration, to procrastination, to production.</p>
+                    <p style="margin-top: 3px">
+                    I am currently conducting research into creativity support tools. I have been collecting stories to build user-centered designs for different creative professionals: musicians, audio engineers, visual artists, illustrators, graphic designers and architects. I have been analyzing and combinging these stories into an summary of the different stages, keys, techniques, and vaguaries of the creative process. I have designed three embodied creativity tools, that support musicians, writers, and illustrators across their creative processes - from ideation, to inspiration, to procrastination, to production.
+                	</p>
                   </li>
                   <li><a href="projects/hcibootcamp/index.html">MeetHalfway</a> - Université Paris-Saclay - 2019<br/>
                     #data-collection #iterative-design #interaction-design #storyboarding
