--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="resume.html">Resumé</a></li>
-                        <li><a href="projects.html">Portfolio</a></li>
+                        <li><a href="projects-all.html">Portfolio</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
