--- a/projects/ahvaHUB/index.html
+++ b/projects/ahvaHUB/index.html
@@ -10,7 +10,7 @@
 	<body>
 			<div id="wrapper">
 					<header id="header">
-						<h3 style="text-align: left;"><a href="../../projects-all.html">< Back</a></h3>
+						<h3 style="text-align: right;"><a href="../../projects.html">Back ></a></h3>
 						<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 						<h1><strong>Graphics/Media Assistant<br/>Visual Art Department (UBC)</strong><br/>
 						Sept 2016 - Aug 2018</h1>
