--- a/projects/ck12/index.html
+++ b/projects/ck12/index.html
@@ -10,7 +10,7 @@
 	<body>
 			<div id="wrapper">
 					<header id="header">
-						<h3 style="text-align: right;"><a href="../../projects.html">Back ></a></h3>
+						<h3 style="text-align: left;"><a href="../../projects-all.html">< Back</a></h3>
 						<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 						<h1><strong>Designer (Contractor)<br/>Ck-12 Foundation</strong><br/>
 						Sept 2011 - Aug 2016</h1>
