figma summer school

--- a/projects-all.html
+++ b/projects-all.html
@@ -231,19 +231,25 @@
       <tr class="thumbnails">
         <td>
           <div class="row">
-            <div class="column3">
+          	<div class="column4">
+              <a href="projects/design/images/fulls/10.jpg">
+                <img src="projects/design/images/thumbs/10.jpg" alt="" width=100%/>
+                <h3>A Figma prototype for an app developed at the EIT Digital FinTech Summer School</h3>
+              </a>
+            </div>
+            <div class="column4">
               <a href="projects/design/images/fulls/01.jpg">
                 <img src="projects/design/images/thumbs/01.jpg" alt="" width=100%/>
                 <h3>Illustrations and graphical assets for the Dutch food delivery service <i>Picobelly</i></h3>
               </a>
             </div>
-            <div class="column3">
+            <div class="column4">
               <a href="projects/design/images/fulls/04.jpg">
                 <img src="projects/design/images/thumbs/04.jpg" alt="" width=100%/>
                 <h3>Illustrating the interaction flow of a CouchSurfing redesign, and conceptual alternatives for user testing</h3>
               </a>
             </div>
-            <div class="column3">
+            <div class="column4">
               <a href="projects/design/images/fulls/07.jpg">
                 <img src="projects/design/images/thumbs/07.jpg" alt="" width=100%/>
                 <h3>An experimental login screen design with a swipe interaction</h3>
