--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 				My interests lie in the intersection of design, technology, and human behavior, and my design work, research, and art aims to explore these complex relationships.
 			</p>
 			<p>
-				I have worked in a variety of design roles at companies companie, and in human-computer interaction research labs.<br>
-				I began in traditional graphic and visual design roles, but gradually shifting towards interaction and experience design as I discovered my passion and empathy for human- and user-oriented design.
+				I have worked in a variety of design roles, beginning in graphic and visual design, and gradually shifting to interaction and experience design with my passion and empathy for human- and user-oriented design.<br>
+				I have also worked in human-computer interaction labs in France and Canada, and exhibited artwork in Vancouver, the Netherlands, and Paris.
 			</p>
 			<p>
 				My education echoed my passions, beginning with studies in computer science, and evolving to encompass fine art and design, concluding with a Masters of Science in Human-Computer Interaction Design at the European Institute of Innovation and Technology.
