more contact details

--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,8 @@
                         <td style="text-align: center;"><h1>Contact</h1><h1>Information</h1></td>
                         <td style="text-align: left; width:80%;">
                             <p><a href="mailto:zacharylwilson@me.com">email</a><p>
+                            <p><a href="https://www.linkedin.com/in/zack-wilson-7bb02b80/" target="blank">LinkedIn</a><p>
+                            <p><a href="https://github.com/zlwilson" target="blank">GitHub</a><p>
                         </td>
                     </tr>
                 </table>
